--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -4,11 +4,11 @@
     top: 15px;
     /* box-shadow: 0 0 20px 5px rgb(51, 50, 50);  */
     width: 100%;
-    background-color:rgba(22, 7, 36, 0.175);
+    background-color:rgba(255, 255, 255, 0.175);
 }
 
 .wrapper{
-    color: black;
+    color: rgb(255, 255, 255);
     height: 70px;
     padding: 0 10%;
     width: 100%;
@@ -49,7 +49,7 @@ button:hover {
 a{
     font-size: 20px;
     font-weight: 500;
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 a:hover{
