--- a/client/src/components/SearchTrip/search_trip.css
+++ b/client/src/components/SearchTrip/search_trip.css
@@ -10,7 +10,8 @@
 }
 
 .search-input {
-  background-color: white;
+  background-color: rgba(54, 61, 67, 0.18);
+  color: white;
   height: 6.5em;
   width: 75vw;
   border-radius: 32px;
@@ -41,7 +42,7 @@
   letter-spacing: 1.1px;
 }
 .search-input:focus-within {
-  background-color: rgba(54, 61, 67, 0.18);
+  background-color: rgba(255, 255, 255, 0.254);
   color: white;
 }
 .search-btn {
